testsuite/ParaSail/nqueens_gtk/test.opt
COMPILER SKIP required built in routines not yet available
